abance del sistema, cambio de base de datos a ms-almacen